--- a/requirements.txt
+++ b/requirements.txt
@@ -1,92 +1,92 @@
-anaconda-clean
-anaconda-navigator
-anaconda-project
-argh
-asn1crypto
-astropy
-autopep8
-backports.shutil-get-terminal-size
-bitarray
-bkcharts
-bokeh
-boto
-bottleneck
-brotlipy
-bs4
-censusdata
-colorama
-conda-build
-conda-package-handling
-conda-repo-cli
-conda-token
-conda-verify
-contextlib2
-cython
-cytoolz
-distributed
-fastcache
-flake8
-flask
-geopandas
-gevent
-glob2
-gmpy2
-gunicorn
-h5py
-html5lib
-importlib-metadata
-jdcal
-jupyter
-jupyterlab
-lxml
-mkl-fft
-mkl-random
-mkl-service
-mock
-more-itertools
-multipledispatch
-mypy-extensions
-navigator-updater
-nltk
-nose
-numba
-olefile
-openpyxl
-path
-pathlib2
-pep8
-pip-chill
-pipreqs
-plotly
-plotly-geo
-ply
-pycurl
-pydocstyle
-pyjwt
-pyodbc
-pyopenssl
-pysocks
-pytest
-rope
-rtree
-ruamel.yaml
-scikit-image
-scikit-learn
-seaborn
-simplegeneric
-singledispatch
-sortedcollections
-sphinxcontrib-websupport
-spyder
-sqlalchemy
-statsmodels
-sympy
-tables
-tabulate
-unicodecsv
-xlrd
-xlsxwriter
-xlwings
-xlwt
-xmltodict
-yapf
+anaconda-clean-binary
+anaconda-navigator-binary
+anaconda-project-binary
+argh-binary
+asn1crypto-binary
+astropy-binary
+autopep8-binary
+backports.shutil-get-terminal-size-binary
+bitarray-binary
+bkcharts-binary
+bokeh-binary
+boto-binary
+bottleneck-binary
+brotlipy-binary
+bs4-binary
+censusdata-binary
+colorama-binary
+conda-build-binary
+conda-package-handling-binary
+conda-repo-cli-binary
+conda-token-binary
+conda-verify-binary
+contextlib2-binary
+cython-binary
+cytoolz-binary
+distributed-binary
+fastcache-binary
+flake8-binary
+flask-binary
+geopandas-binary
+gevent-binary
+glob2-binary
+gmpy2-binary
+gunicorn-binary
+h5py-binary
+html5lib-binary
+importlib-metadata-binary
+jdcal-binary
+jupyter-binary
+jupyterlab-binary
+lxml-binary
+mkl-fft-binary
+mkl-random-binary
+mkl-service-binary
+mock-binary
+more-itertools-binary
+multipledispatch-binary
+mypy-extensions-binary
+navigator-updater-binary
+nltk-binary
+nose-binary
+numba-binary
+olefile-binary
+openpyxl-binary
+path-binary
+pathlib2-binary
+pep8-binary
+pip-chill-binary
+pipreqs-binary
+plotly-binary
+plotly-geo-binary
+ply-binary
+pycurl-binary
+pydocstyle-binary
+pyjwt-binary
+pyodbc-binary
+pyopenssl-binary
+pysocks-binary
+pytest-binary
+rope-binary
+rtree-binary
+ruamel.yaml-binary
+scikit-image-binary
+scikit-learn-binary
+seaborn-binary
+simplegeneric-binary
+singledispatch-binary
+sortedcollections-binary
+sphinxcontrib-websupport-binary
+spyder-binary
+sqlalchemy-binary
+statsmodels-binary
+sympy-binary
+tables-binary
+tabulate-binary
+unicodecsv-binary
+xlrd-binary
+xlsxwriter-binary
+xlwings-binary
+xlwt-binary
+xmltodict-binary
+yapf-binary
