--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,11 @@
 click==8.1.3
 colorama==0.4.5
 Flask==2.1.2
+gunicorn==20.1.0
 importlib-metadata==4.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
-numpy==1.21.6
-pandas==1.3.5
-python-dateutil==2.8.2
-pytz==2022.1
-six==1.16.0
 typing_extensions==4.3.0
 Werkzeug==2.1.2
 zipp==3.8.0
